# fub-mcp

./: .cursorrules  .gitignore  CACHING_STRATEGY.md  CURSOR_SETUP.md  DEPLOYMENT_READY.md  DUPLICATE_CHECK_GUIDE.md  FIX_CURSOR_ERROR.md  GITHUB_DEPLOY_SUCCESS.md  MULTI_CLIENT_SETUP.md  PAGINATION_AND_DUPLICATES_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  REORGANIZATION_COMPLETE.md  SUMMARY.md  TESTING.md  create_uuid_field.py  cursor_mcp_config.json  env.example  last_5_people_20251031_160847.json  pyproject.toml  pytest.ini  requirements.txt  run_mcp_server.sh  setup.py  test_create_contact.py  test_create_debug.py  test_duplicate_check.py  test_pagination_1000.py  verify_uuid_field.py
docs/: README.md  REORGANIZATION_PLAN.md
docs/archive/: BUILD_PLAN.md  CACHING_SUMMARY.md  CRUD_SUMMARY.md  DUPLICATE_CHECKER_APPROACH.md  EXECUTIVE_SUMMARY.md
docs/guides/: CRUD_GUIDE.md  DEPLOYMENT_READY.md  MULTI_CLIENT_SETUP.md  QUICK_START_DISCOVERY.md  RUN_SERVER.md
docs/implementation/: CUSTOM_FIELDS_EXPLAINED.md  DYNAMIC_DISCOVERY_IMPLEMENTATION.md  DYNAMIC_SEARCH_METHOD_GUIDE.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENT_ROADMAP.md  PAGINATION_IMPROVEMENTS.md  (+1 more)
examples/: basic_usage.py  crud_example.py
scripts/: check_custom_fields.py  demo_mcp_query.py  download_last_5_people.py  estimate_data_size.py  get_recent_contact.py  list_all_tools.py  measure_cache_size.py  push_to_remote.sh  run_server.sh
tests/: __init__.py  conftest.py  test_config.py  test_crud.py  test_fub_client.py  test_integration.py  test_processors.py  test_server.py
(+23 files in other folders)
