[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fub-mcp"
version = "0.1.0"
description = "MCP Server for Follow Up Boss CRM API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fub-mcp = "fub_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

